gh repo clone Kalvium-Program/Kalvium-Program-20-

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <div>
     <!-- Task  -->
     <p>Your First task is to set the font of the first paragraph below to verdana font using Inline CSS only(Please Note only Inline CSS have to be used)</p>
-    <p id="html">
+    <p id="html" style="font-family:verdana ;">
       The HyperText Markup Language or HTML is the standard markup language for
       documents designed to be displayed in a web browser. It can be assisted by
       technologies such as Cascading Style Sheets (CSS) and scripting languages
@@ -35,7 +35,7 @@
 
   <!-- Task 2 -->
   <p>Your second task is to set the colour of the second paragraph below to blue using Inline CSS only(Please Note only Inline CSS have to be used)</p>
-  <p id="css" >
+  <p id="css" style="color: blue;">
     The HyperText Markup Language or HTML is the standard markup language for
     documents designed to be displayed in a web browser. It can be assisted by
     technologies such as Cascading Style Sheets (CSS) and scripting languages
@@ -45,7 +45,28 @@
 <!-- Task 3 -->
 <p>Your third task is to create a `table` with four rows and three columns</p>
 <!-- Ensure that your table contains only 4 rows and does not include a <thead> element.-->
-
+<table>
+  <tr>
+    <td>gff</td>
+    <td>gth</td>
+    <td>hyt</td>
+  </tr>
+<tr>
+  <td>oi</td>
+  <td>oi</td>
+  <td>oi</td>
+</tr>
+<tr>
+  <td>kj</td>
+  <td>kj</td>
+  <td>kj</td>
+</tr>
+<tr>
+  <td>lpoi</td>
+  <td>lpoi</td>
+  <td>lpoi</td>
+</tr>
+</table>
   
 <!-- After completing this, please go to app.js -->
   </div>
